tidy up a bit python files location

--- a/notebooks/3.0-MPC-v3-track-constrains.ipynb
+++ b/notebooks/3.0-MPC-v3-track-constrains.ipynb
@@ -1088,9 +1088,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:.conda-jupyter] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-.conda-jupyter-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1102,7 +1102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
